@@ -2,7 +2,8 @@ import multiprocessing
 from gui.bomb_timer_gui import TimerGui
 from listener.gamestate_listener import ListenerWrapper
 
-if __name__ == "__main__":
+
+def main():
     # Message queue used for comms between processes
     queue = multiprocessing.Queue()
     gui = TimerGui(queue)
@@ -14,3 +15,6 @@ if __name__ == "__main__":
     gui.join()
     listener.shutdown()
     listener.join()
+
+if __name__ == "__main__":
+    main()
